--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@remotion/animation-utils": "4.0.376",
     "@remotion/cli": "4.0.376",
+    "@remotion/shapes": "4.0.376",
+    "@remotion/tailwind-v4": "4.0.376",
     "@remotion/zod-types": "4.0.376",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "remotion": "4.0.376",
-    "zod": "3.22.3",
-    "@remotion/tailwind-v4": "4.0.376",
-    "tailwindcss": "4.0.0"
+    "zod": "3.22.3"
   },
   "devDependencies": {
+    "@remotion/bundler": "^4.0.377",
     "@remotion/eslint-config-flat": "4.0.376",
+    "@remotion/renderer": "^4.0.377",
     "@types/react": "19.0.0",
     "@types/web": "0.0.166",
     "eslint": "9.19.0",
@@ -26,6 +29,12 @@
   "scripts": {
     "dev": "remotion studio",
     "build": "remotion bundle",
+    "render": "remotion render Landscape out/Landscape.mp4",
+    "render:portrait": "remotion render Portrait out/Portrait.mp4",
+    "render:4k": "remotion render Landscape4K out/Landscape4K.mp4",
+    "render:portrait4k": "remotion render Portrait4K out/Portrait4K.mp4",
+    "render:LandscapeEmpty": "remotion render LandscapeEmpty out/LandscapeEmpty.mp4",
+    "render:all": "npx -y tsx render-all.ts",
     "upgrade": "remotion upgrade",
     "lint": "eslint src && tsc"
   },
